--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">BluetoothApp</string>
     <string name="devices_title">Devices</string>
     <string name="bluetooth">Nearby Bluetooth Devices</string>
+    <string name="crash_alerts">Crash Alerts</string>
 </resources>
