--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,7 @@
 <resources>
-    <string name="app_name">BluetoothApp</string>
+    <string name="app_name">Motorcycle Crash Detection</string>
     <string name="devices_title">Devices</string>
     <string name="bluetooth">Nearby Bluetooth Devices</string>
     <string name="crash_alerts">Crash Alerts</string>
+    <string name="dashboard">Dashboard</string>
 </resources>
